1- Move process management to the JS code (in case of debug too) (like node apps) 2- Debug applications with libraries 3- Debug simple java web app and step and continue on requests 4- Spring template project & running & debugging 5- cloud9/client/ext/javalanguage/README (not yet ready) for others to install the environment 6- Many fixes and enhancements on the bumped sub-projects
Bump jvm-run
Bump jvm_features
Bump lib-javadebug